<resources>
    <string name="app_name">The Care App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_lbl_recent_doctors">မကြာသေးခင်က ဆွေးနွေးမှုများ</string>
    <string name="txt_lbl_specialities">ရောဂါအမျိုးအစားများ</string>
    <string name="txt_lbl_general_questions">အထွေထွေမေးခွန်းများ</string>
    <string name="txt_lbl_specific_questions">ရောဂါဆိုင်ရာမေးခွန်းများ</string>
    <string name="txt_lbl_patient_info">လူနာအချက်အလက်များ</string>
    <string name="txt_lbl_dob">မွေးနေ့</string>
    <string name="txt_lbl_height">အရပ်</string>
    <string name="txt_lbl_blood_type">သွေးအမျိုးအစား</string>
    <string name="txt_lbl_weight">ခန္ဓာကိုယ်အလေးချိန်</string>
    <string name="txt_lbl_blood_pressure">သွေးပေါင်ချိန်</string>
    <string name="txt_lbl_allergic_medicine">မတည့်သောဆေး</string>
    <string name="btn_lbl_continue">ဆက်ရန်</string>
    <string name="txt_lbl_patient_name">လူနာအမည်</string>
    <string name="btn_lbl_consult">ချိန်းဆိုမှု ပြုလုပ်မည်</string>
    <string name="edt_hint_lbl_answer">ဤနေရာတွင် အဖြေ ဖြေပေးပါ</string>
    <string name="txt_lbl_confirm_info">အချက်အလက်များအား အတည်ပြုပေးပါ</string>
    <string name="txt_lbl_confirm_consultation">ဆွေးနွေးမှု အတည်ပြုချက်</string>
    <string name="txt_lbl_question_consultation">ဆရာ၀န်နှင့်တိုင်ပင်ဆွေးနွေးရန် Consultation Request ပြုလုပ်မှာ သေချာပါသလား။</string>
    <string name="btn_lbl_sure">သေချာပါသည်</string>
    <string name="btn_lbl_no">မလုပ်တော့ပါ</string>
    <string name="txt_lbl_fill_patient_info">လူနာအချက်အလက်ဖြည့်ပါ</string>
    <string name="txt_lbl_medicine">ဆေးညွှန်း</string>
    <string name="txt_lbl_address">လိပ်စာ</string>
    <string name="txt_lbl_division">တိုင်း/ပြည်နယ်</string>
    <string name="txt_lbl_city">မြို့နယ်</string>
    <string name="txt_lbl_full_address">လိပ်စာအပြည့်အစုံ</string>
    <string name="btn_lbl_take_order">မှာယူမည်</string>
    <string name="txt_lbl_choose_address">လိပ်စာရွေးချယ်ပါ</string>
    <string name="btn_lbl_add_new_address">လိပ်စာအသစ်</string>
    <string name="txt_lbl_subtotal">Subtotal</string>
    <string name="txt_lbl_delivery_fee">Delivery Fee</string>
    <string name="txt_lbl_total">Total (MMK)</string>
    <string name="txt_lbl_payment_info">ငွေပေးချေမှု အတည်ပြုပြီး နောက်တစ်ရက်မှ စတင်၍ ဆေးများကို လိုက်လံပို့ဆောင်မည် ဖြစ်ပါသည်။</string>
    <string name="btn_lbl_pay">ငွေပေးချေမည်</string>
    <string name="txt_lbl_medicine_amount">ပမာဏ</string>
    <string name="txt_lbl_medicine_qty">အရေအတွက်</string>
    <string name="txt_lbl_duration">ကြာချိန်</string>
    <string name="txt_lbl_taking_time">အကြိမ်အရေအတွက်</string>
    <string name="txt_lbl_repeat">Repeat</string>
    <string name="txt_lbl_remark">မှတ်ချက်</string>
    <string name="btn_lbl_close">ပိတ်မည်</string>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="years">
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <string-array name="blood_types">
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>
</resources>