<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMedicineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vitamin - C"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_medium_2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:text="@string/txt_lbl_medicine_amount"/>

        <TextView
            android:id="@+id/tvMedicineAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text"
            android:text="200 mg"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_small"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:text="@string/txt_lbl_medicine_qty"/>

        <TextView
            android:id="@+id/tvMedicineQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text"
            android:text="1 Tablet"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:text="@string/txt_lbl_duration"/>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text"
            android:text="3 Days"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:text="@string/txt_lbl_taking_time"/>

        <TextView
            android:id="@+id/tvTakingTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text"
            android:text="Morning/Noon/Evening"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:text="@string/txt_lbl_repeat"/>

        <TextView
            android:id="@+id/tvRepeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text"
            android:text="every day"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="@dimen/margin_small">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:text="@string/txt_lbl_remark"/>

        <TextView
            android:id="@+id/tvRemark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_regular"
            android:textColor="@color/primary_text"
            android:text="Take it after meal"/>


    </LinearLayout>

</LinearLayout>